# cookiecutter-plugin-templates

./: Makefile  cookiecutter.json
docs/: console_script_setup.rst  prompts.rst  tutorial.rst
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.__project_dir}}/: .env.test.sample  .flake8  .pre-commit-config.yaml  Makefile  README.md  README.rst  pyproject.toml
{{cookiecutter.__project_dir}}/docs/: index.rst  installation.rst
{{cookiecutter.__project_dir}}/tests_{{cookiecutter.project_slug}}/integration/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.__project_dir}}/tests_{{cookiecutter.project_slug}}/unit/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.__project_dir}}/{{cookiecutter.project_slug}}/: llm.py
{{cookiecutter._project_kebab}}/: .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  pyproject.toml
{{cookiecutter.project_dir}}/: pyproject.toml
{{cookiecutter.project_dir}}/docs/: installation.rst
{{cookiecutter.project_dir}}/tests_{{cookiecutter.project_slug}}/unit/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_package}}/: .env.ci  .env.sample  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
{{cookiecutter.project_package}}/.github/actions/setup/: action.yml
{{cookiecutter.project_package}}/.github/workflows/: main.yml
{{cookiecutter.project_package}}/docs/: Makefile  conf.py  docs.py  docs.sh  index.md  installation.md  make.bat
{{cookiecutter.project_package}}/docs/_templates/: module.rst_t  package.rst_t
{{cookiecutter.project_package}}/src/{{cookiecutter.__project_root_dir}}/: __init__.py  _version.py  _{{ cookiecutter.__service_module}}.py
{{cookiecutter.project_package}}/tests_{{cookiecutter.__project_underscore}}/: conftest.py
{{cookiecutter.project_package}}/tests_{{cookiecutter.__project_underscore}}/integration/: test_{{cookiecutter.__service_module}}_live.py
{{cookiecutter.project_package}}/tests_{{cookiecutter.__project_underscore}}/unit/: test_llm.py  test_plugin.py
{{cookiecutter.project_slug}}/: .env.test.sample  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/docs/: authors.md  build_docs.sh  conf.py  history.md  index.md  installation.md
{{cookiecutter.project_slug}}/docs/api/: authors.md  conf.py  history.md  index.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.__project_root_dir}}/: __init__.py  _llm.py  _plugin.py
{{cookiecutter.project_slug}}/tests_{{cookiecutter.__project_underscore}}/integration/: test_{{cookiecutter.__project_underscore}}.py
{{cookiecutter.project_slug}}/tests_{{cookiecutter.__project_underscore}}/unit/: test_plugin.py  test_{{cookiecutter.__project_underscore}}.py
